--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,1 @@
-<embed src="https://zPokek98.github.io/SalvatoreMignanoCV.pdf" type="application/pdf" />
+<embed src="https://zPokek98.github.io/SalvatoreMignano_CV.pdf" type="application/pdf" />
